<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextHrs"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:height="100dp"
        android:autofillHints="@string/hint1"
        android:background="@drawable/gradient_corners"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/hint1"
        android:inputType="number"
        android:minWidth="60dp"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/editTextMinutes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:height="100dp"
        android:background="@drawable/gradient_corners"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/hint2"
        android:autofillHints="@string/hint2"
        android:inputType="number"
        android:minWidth="60dp"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextHrs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toEndOf="@+id/editTextHrs" />

    <EditText
        android:id="@+id/editTextSeconds"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:height="100dp"
        android:background="@drawable/gradient_corners"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/hint3"
        android:autofillHints="@string/hint3"
        android:inputType="number"
        android:minWidth="60dp"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextMinutes" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient_corners"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/textView_Text"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_corners"
        android:text="@string/button_text1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#F2F2F2"
        android:textSize="14sp"
        app:backgroundTint="@color/null_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_corners"
        android:text="@string/button_text2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#F2F2F2"
        android:textSize="14sp"
        app:backgroundTint="@color/null_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />
</androidx.constraintlayout.widget.ConstraintLayout>